--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -1,7 +1,5 @@
-@use "core/variables" as *;
-
 // fonts
-$font: $font-family-roboto;
+$font: 'Roboto', sans-serif;
 
 // vendor prefix
 @mixin prefix($name, $argument) {
@@ -28,56 +26,56 @@ $font: $font-family-roboto;
 }
 
 // default transition
-.transition {
+.transition{
     @include prefix('transition', '300ms all ease 0s');
 }
 
 // queries
-$sm: $breakpoint-md - 1px;
-$md: $breakpoint-lg;
+$sm: 767px;
+$md: 992px;
 
 // rem ajust
 html,
-body {
-    @include typo($font-size-xs, $font-weight-normal, $font, 1);
+body{
+    @include typo(10px, 400, $font, 1);
 }
 
-.application {
+.application{
     background-attachment: fixed;
-    background-color: $bg-light;
+    background-color: #f1f1f1;
     background-position: center top;
 }
 
-.container {
-    @media (min-width: 768px) and (max-width: 991px) {
+.container{
+    @media (min-width: 768px) and (max-width: 991px){
         width: 95%;
     }
 }
 
-.content-split {
-    border-color: $border-dark;
-    margin-bottom: $spacing-xxxl;
+.content-split{
+    border-color: #ccc;
+    margin-bottom: 30px;
     margin-top: 0;
 }
 
-.page {
-    &__content {
-        z-index: $z-index-base + 4;
-        background-color: $bg-white;
-        padding: $spacing-lg;
-        
-        .container {
-            padding: 0;
-            width: 100%;
-        }   
-    }
+.page-content{
+    z-index: 5;
+    background-color: #fff;
+    padding: 15px;
+    
+    .container{
+        padding: 0;
+        width: 100%;
+    }   
 }
 
-.page-home, .page-catalog, .page-product, .page-search {
-    .page__content {
+.page-home, .page-catalog, .page-product, .page-search{
+    .page-content{
         background-color: transparent;
     }
 }
+
+
 
 .site-main {
     position: relative;
@@ -86,24 +84,18 @@ body {
 
 /* centered columns styles */
 .row-centered {
-    text-align: center;
+    text-align:center;
 }
 
-.col-centered {
+.col-centered{
     display: inline-block;
-    float: none;
+    float:none;
     /* reset the text-align */
-    text-align: left;
+    text-align:left;
     /* inline-block space fix */
-    margin-right: -4px;
+    margin-right:-4px;
 }
 
-#miniad {
+#miniad{
     width: auto;
-}
-
-// Legacy selectors for backward compatibility
-// TODO: Remove after HTML is updated
-.page-content {
-    @extend .page__content;
 }
