--- a/css/sass/theme.min.scss
+++ b/css/sass/theme.min.scss
@@ -1,49 +1,47 @@
-// Import variables and base styles
-@use "sass" as *;
-
 // base
-@use "reset" as *;
-@use "reset-tray" as *;
-@use "typo" as *;
-@use "styleguide" as *;
+@import "reset";
+@import "reset-tray";
+@import "base";
+@import "typo";
+@import "styleguide";
 
 //pages
-@use "page-cart" as *; 
-@use "page-catalog" as *;
-@use "page-central_cliente" as *;
-@use "page-comparador" as *;
-@use "page-contact" as *; 
-@use "page-depoimentos" as *;
-@use "page-extra" as *;
-@use "page-implantacao" as *;
-@use "page-listas" as *;
-@use "page-login" as *;
-@use "page-newsletter" as *; 
-@use "page-noticia" as *;
-@use "page-payment" as *;
-@use "page-product" as *;
-@use "page-register" as *;
-@use "page-visitados" as *;
+@import "page-cart"; 
+@import "page-catalog";
+@import "page-central_cliente";
+@import "page-comparador";
+@import "page-contact"; 
+@import "page-depoimentos";
+@import "page-extra";
+@import "page-implantacao";
+@import "page-listas";
+@import "page-login";
+@import "page-newsletter"; 
+@import "page-noticia";
+@import "page-payment";
+@import "page-product";
+@import "page-register";
+@import "page-visitados";
 
 // organisms
-@use "header" as *;
-@use "footer" as *;
+@import "header";
+@import "footer";
 
 // molecules
-@use "address" as *;
-@use "breadcrumb" as *;
-@use "customer" as *;
-@use "cart" as *;
-@use "sidebar" as *; 
-@use "menu-mobile" as *;
-@use "slick" as *;
-@use "banners" as *; 
-@use "newsletter" as *;
-@use "product" as *;
-@use "store-rating" as *;
-@use "search" as *;
-@use "showcase" as *; 
-@use "tagcloud" as *;
-@use "suggestion" as *;
-@use "tray-kit" as *;
-@use "new-filter" as *;
+@import "address";
+@import "breadcrumb";
+@import "customer";
+@import "cart";
+@import "sidebar"; 
+@import "menu-mobile";
+@import "slick";
+@import "banners"; 
+@import "newsletter";
+@import "product";
+@import "store-rating";
+@import "search";
+@import "showcase"; 
+@import "tagcloud";
+@import "suggestion";
+@import "tray-kit";
+@import "new-filter";
