--- a/css/sass/store-rating.scss
+++ b/css/sass/store-rating.scss
@@ -1,16 +1,14 @@
-@use "core/variables" as *;
-
 .store-rating{
-    background: $bg-white;
-    border: $border-width solid $border-gray;
-    margin-top: $spacing-xxxl;
-    padding: $spacing-lg;
+    background: #fff;
+    border: 1px solid #e2e2e2;
+    margin-top: 30px;
+    padding: 15px;
     
     > h4{
-        color: $text-black;
-        margin-bottom: $spacing-sm;
+        color: #000;
+        margin-bottom: 5px;
         text-transform: uppercase;
-        @include typo(1.3rem, $font-weight-normal, $font, 1.3rem);
+        @include typo(1.3rem, 400, $font, 1.3rem);
         
         @media (min-width: 768px) and (max-width: 991px){
             margin-bottom: 0;
@@ -18,9 +16,9 @@
     }
     
     > h3{
-        color: $text-black;
+        color: #000;
         text-transform: uppercase;
-        @include typo(2.5rem, $font-weight-normal, $font, 2.5rem);
+        @include typo(2.5rem, 400, $font, 2.5rem);
         
         @media (min-width: 768px) and (max-width: 991px){
             @include typo(2rem, 400, $font, 2rem);
@@ -29,17 +27,17 @@
     
     .dep_lista{
         font-size: 0;
-        margin: $spacing-lg -$spacing-lg 0;
+        margin: 15px -15px 0;
     }
     
     .dep_item{
         display: block;
-        font-size: $font-size-sm;
+        font-size: 1.2rem;
         line-height: 1.6rem;
     }
     
     .dep_dados{
-        padding: $spacing-lg;
+        padding: 15px;
         
         > li{
             
@@ -50,14 +48,14 @@
     }
     
     .dep_link{
-        margin-top: $spacing-lg;
+        margin-top: 15px;
         font-size: 0;
         text-align: center;
         
         a{
-            background: $text-muted;
-            color: $text-white;
-            font-size: $font-size-md;
+            background: #a2a2a2;
+            color: #fff;
+            font-size: 1.4rem;
             padding: 9px 0;
             text-align: center;
             text-transform: uppercase;
