--- a/css/sass/tagcloud.scss
+++ b/css/sass/tagcloud.scss
@@ -1,14 +1,12 @@
-@use "core/variables" as *;
-
 .tagcloud{
-    background: $bg-white;
-    border: $border-width solid $border-gray;
-    margin-top: $spacing-xxxl;
-    padding: $spacing-lg;
+    background: #fff;
+    border: 1px solid #e2e2e2;
+    margin-top: 30px;
+    padding: 15px;
     
     a{
         display: inline-block;
-        font-size: $font-size-xl !important;
+        font-size: 16px !important;
         text-decoration: none;
         
         &:hover{
@@ -17,10 +15,10 @@
     }
     
     > h4{
-        color: $text-black;
-        margin-bottom: $spacing-sm;
+        color: #000;
+        margin-bottom: 5px;
         text-transform: uppercase;
-        @include typo(1.3rem, $font-weight-normal, $font, 1.3rem);
+        @include typo(1.3rem, 400, $font, 1.3rem);
         
         @media (min-width: 768px) and (max-width: 991px){
             margin-bottom: 0;
@@ -29,8 +27,8 @@
     
     > h3{
         text-transform: uppercase;
-        @include typo(2.2rem, $font-weight-normal, $font, 2.2rem);
-        margin-bottom: $spacing-md;
+        @include typo(2.2rem, 400, $font, 2.2rem);
+        margin-bottom: 10px;
         
         @media (min-width: 768px) and (max-width: 991px){
             @include typo(2rem, 400, $font, 2rem);
@@ -49,7 +47,7 @@
         }
         
         a{
-            color: $text-muted;
+            color: #a2a2a2;
         }
     }
 }
