--- a/css/sass/tray-kit.scss
+++ b/css/sass/tray-kit.scss
@@ -1,9 +1,7 @@
-@use "core/variables" as *;
-
 .tray-kit {
-    border: $border-width solid $border-light;
-    margin-bottom: $spacing-lg;
-    padding: $spacing-lg;
+    border: 1px solid #e1e1e1;
+    margin-bottom: 15px;
+    padding: 15px;
     
     
     div[style="clear:both;"] {
@@ -12,8 +10,8 @@
 }
 
 .tray-kit-item {
-    border-top: $border-width solid $border-light;
-    padding: $spacing-lg 0 $spacing-xxl;
+    border-top: 1px solid #e1e1e1;
+    padding: 15px 0 25px;
     
     &:first-child {
         border-top: none;
@@ -32,14 +30,14 @@
 
 .tray-kit-image {
     float: left;
-    width: $image-max-width;
-    margin-right: $spacing-lg;
-    border: $border-width solid $border-light;
+    width: 90px;
+    margin-right: 15px;
+    border: 1px solid #e1e1e1;
 }
 
 .tray-kit-name {
-    font-weight: $font-weight-bold;
-    padding: $spacing-sm 0;
+    font-weight: 700;
+    padding: 5px 0;
 }
 
 .tray-kit-info {
@@ -53,27 +51,27 @@
     position: absolute;
     left: 0;
     top: 95px;
-    width: $image-max-width;
+    width: 90px;
     text-align: center;
 }
 
 .tray-kit-show-all {
-    font-size: $font-size-sm;
+    font-size: 1.2rem;
     text-align: center;
-    margin-top: $spacing-md;
+    margin-top: 10px;
 }
 
 .tray-kit-title h3 {
-    font-weight: $font-weight-bold;
-    border-bottom: $border-width solid $border-light;
-    padding-bottom: $spacing-md;
-    margin-bottom: $spacing-md;
+    font-weight: 700;
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .tray-kit-additional-info .onVar,
 .tray-kit-additional-info .onVar:hover{
-    color: $text-black;
-    font-size: $font-size-sm;
+    color: #000;
+    font-size: 1.2rem;
 }
 
 .tray-kit-additional-info {
@@ -90,25 +88,25 @@
     
     .text,
     .textarea{
-        margin-bottom: $spacing-sm !important;
+        margin-bottom: 5px !important;
     }
     
     .dd .ddTitle span.ddTitleText{
-        font-weight: $font-weight-normal;
-        font-size: $font-size-sm;
+        font-weight: 400;
+        font-size: 1.2rem;
     }
     
     .select,
     .ddTitle,
     .textarea{
-        border: $border-width solid $border-light;
-        font-weight: $font-weight-normal;
-        font-size: $font-size-sm;
-        height: $input-height;
+        border: 1px solid #e1e1e1;
+        font-weight: 400;
+        font-size: 1.2rem;
+        height: 24px;
     }
     
     .varCont > *{
-        color: $text-dark;
+        color: #222;
         display: block;
     }
 }
@@ -117,19 +115,19 @@
     
     img {
         display: block;
-        height: $button-height;
+        height: 30px;
         overflow: hidden;
-        width: $button-height;
+        width: 30px;
     }
     
     li {
-        border: $border-width solid $border-light;
+        border: 1px solid #e1e1e1;
         display: inline-block;
-        font-size: $font-size-md;
-        line-height: $button-height;
-        margin: 0 $spacing-sm $spacing-sm 0;
-        min-height: $button-height;
-        min-width: $button-min-width;
+        font-size: 1.4rem;
+        line-height: 30px;
+        margin: 0 5px 5px 0;
+        min-height: 30px;
+        min-width: 30px;
         text-align: center;
     }
 }
